# docreplacer

./: Makefile  README.md  pyproject.toml
doc_replacer/: catalog.py  date.py
doc_replacer/ref/: reference_book.xlsx
doc_replacer/scripts/: docreplacer.py
